fix colors in dark mode

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,3 @@
 :host {
-  @apply flex min-h-screen w-screen flex-col items-center bg-gradient-to-b from-slate-100 to-slate-200 dark:bg-gradient-to-t dark:from-slate-800 dark:to-slate-600
+  @apply flex min-h-screen w-screen flex-col items-center
 }
